2014-02-04  Zan Dobersek  <zdobersek@igalia.com>

        Partially revert r162947 so that Document::topDocument() again Walk over the chain of
        owner Elements. This fixes the crashes related to creating and accessing the AXObjectCache
        of documents that were introduced in that revision, which determined the top document by
        returning the Document of the main frame. This fails badly when the frame in question is cached.

        * dom/Document.cpp:
        (WebCore::Document::topDocument):

2014-01-31  Anders Carlsson  <andersca@apple.com>

        Don't allocate a new XMLHttpRequestStaticData every time staticData() is called
        https://bugs.webkit.org/show_bug.cgi?id=127996

        Reviewed by Andreas Kling.

        std::once_flag should be static.

        * xml/XMLHttpRequest.cpp:
        (WebCore::staticData):

2014-01-30  Csaba Osztrogonác  <ossy@webkit.org>

        [SOUP] Fix the build if !ENABLE(WEB_TIMING)
        https://bugs.webkit.org/show_bug.cgi?id=127906

        Reviewed by Gustavo Noronha Silva.

        * platform/network/soup/SoupNetworkSession.cpp:

2014-01-29  Csaba Osztrogonác  <ossy@webkit.org>

        Remove ENABLE(JAVASCRIPT_DEBUGGER) leftovers
        https://bugs.webkit.org/show_bug.cgi?id=127845

        Reviewed by Joseph Pecoraro.

        * Configurations/FeatureDefines.xcconfig:
        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::JSDOMWindowBase::supportsProfiling):

2014-01-29  Dan Bernstein  <mitz@apple.com>

        Fixed the iOS build.

        * bindings/js/JSDOMWindowCustom.cpp: Updated for header renames.

2014-01-29  Csaba Osztrogonác  <ossy@webkit.org>

        Remove ENABLE(JAVASCRIPT_DEBUGGER) guards
        https://bugs.webkit.org/show_bug.cgi?id=127840

        Reviewed by Mark Lam.

        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::JSDOMWindowBase::supportsProfiling):
        (WebCore::JSDOMWindowBase::supportsRichSourceInfo):